[tool.poetry]
name = "eks"
version = "0.1.0"
description = "Event-Keyed Summarization"
authors = ["Will Gantt <wgantt.iv@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.2"
numpy = "^1.26.4"
click = "^8.1.7"
datasets = "^2.17.0"
evaluate = "^0.4.1"
accelerate = "^0.27.0"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
